--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"expo": "~54.0.7",
 		"expo-constants": "~18.0.8",
 		"expo-dev-client": "~6.0.12",
+		"expo-font": "~14.0.8",
 		"expo-linking": "~8.0.8",
 		"expo-router": "~6.0.4",
 		"expo-status-bar": "~3.0.8",
@@ -25,6 +26,7 @@
 		"react-native-reanimated": "~4.1.0",
 		"react-native-safe-area-context": "5.6.1",
 		"react-native-screens": "~4.16.0",
+		"react-native-svg": "15.12.1",
 		"react-native-worklets": "0.5.1"
 	},
 	"devDependencies": {
