--- a/package.json
+++ b/package.json
@@ -1,46 +1,49 @@
 {
-	"name": "my-expo-app",
-	"version": "1.0.0",
-	"scripts": {
-		"android": "expo start --android",
-		"ios": "expo start --ios",
-		"start": "expo start",
-		"prebuild": "expo prebuild",
-		"lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
-		"format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
-		"web": "expo start --web"
-	},
-	"dependencies": {
-		"expo": "~54.0.7",
-		"expo-constants": "~18.0.8",
-		"expo-dev-client": "~6.0.12",
-		"expo-font": "~14.0.8",
-		"expo-linking": "~8.0.8",
-		"expo-router": "~6.0.4",
-		"expo-status-bar": "~3.0.8",
-		"metro-config": "^0.83.1",
-		"metro-react-native-babel-transformer": "^0.77.0",
-		"nativewind": "^4.2.1",
-		"react": "19.1.0",
-		"react-native": "0.81.4",
-		"react-native-reanimated": "~4.1.0",
-		"react-native-safe-area-context": "5.6.1",
-		"react-native-screens": "~4.16.0",
-		"react-native-svg": "15.12.1",
-		"react-native-worklets": "0.5.1"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.20.0",
-		"@types/react": "~19.1.13",
-		"eslint": "^9.25.1",
-		"eslint-config-expo": "^10.0.0",
-		"eslint-config-prettier": "^10.1.2",
-		"metro-core": "0.83.1",
-		"prettier": "^3.2.5",
-		"prettier-plugin-tailwindcss": "^0.5.11",
-		"tailwindcss": "^3.4.17",
-		"typescript": "~5.9.2"
-	},
-	"main": "expo-router/entry",
-	"private": true
+  "name": "my-expo-app",
+  "version": "1.0.0",
+  "scripts": {
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "start": "expo start",
+    "prebuild": "expo prebuild",
+    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
+    "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "expo": "~54.0.7",
+    "expo-constants": "~18.0.8",
+    "expo-dev-client": "~6.0.12",
+    "expo-font": "~14.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.4",
+    "expo-status-bar": "~3.0.8",
+    "metro-config": "^0.83.1",
+    "metro-react-native-babel-transformer": "^0.77.0",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
+    "nativewind": "^4.2.1",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-image-colors": "^2.5.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "5.6.1",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-worklets": "0.5.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@types/react": "~19.1.13",
+    "eslint": "^9.25.1",
+    "eslint-config-expo": "^10.0.0",
+    "eslint-config-prettier": "^10.1.2",
+    "metro-core": "0.83.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.9.2"
+  },
+  "main": "expo-router/entry",
+  "private": true
 }
