--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@epubjs-react-native/expo-file-system": "^1.1.4",
     "expo": "~54.0.7",
     "expo-constants": "~18.0.8",
     "expo-dev-client": "~6.0.12",
@@ -25,11 +26,14 @@
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-image-colors": "^2.5.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
